--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title> SM Hacks </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway|Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
     <script>
       function set(x) {
@@ -17,7 +17,8 @@
       <div class="intro">
         SM Hacks
         <div class="subtitle">
-          San Mateo's First High School Hackathon
+          San Mateo's First High School Hackathon<br>
+          September 17-18th 2016
         </div>
       </div>
       <div class="bridge">
@@ -40,114 +41,50 @@
         FAQ
       </div>
       <div class="inbox">
-        <div class="tabs">
-          <div class="tab" onclick="set(1)"> General </div>
-          <div class="tab" onclick="set(2)"> Application </div>
-          <div class="tab" onclick="set(3)"> Logistics </div>
-          <div class="tab" onclick="set(4)"> Other </div>
-        </div>
         <div class="cards active" id="set-1">
           <div class="card">
             <div class="q">What is SM Hacks?</div>
-            <div class="a">SM Hacks is a  </div>
+            <div class="a">SM Hacks is a 200-person hackathon that will gather the innovators of tomorrow into an amazing experience.</div>
           </div>
           <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
+            <div class="q">What is a hackathon?</div>
+            <div class="a">A hackathon is a 24-hour programming marathon where your ideas come to life. Over the course of the weekend, students from all backgrounds and all skill levels collaborate in teams of up to four to build something awesome.</div>
           </div>
           <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
+            <div class="q">What if I don't know how to code?</div>
+            <div class="a">No worries! SM Hacks is the perfect time to learn how to code and all students, regardless of skill level and experience, are welcome. There will be plenty of mentors on hand glad to answer any and all questions and workshops specifically designed for those with no prior experience. Stay tuned for more information about workshops! </div>
           </div>
           <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
+            <div class="q">Do I have to be in high school?</div>
+            <div class="a">Yes, only current high school students will be able to attend. Unfortunately, we are not accepting middle school students. College students are welcome to help out as mentors!</div>
           </div>
           <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
+            <div class="q">What if I don't have a team or an idea?</div>
+            <div class="a">No worries! It is not uncommon for people to come into the hackathon without an already-formed group, but we'll make sure you're matched with the right people! We will have a team formation and ideation session the first night so everyone can find the perfect team and come up with awesome ideas, so don't you worry first-time hackers!</div>
           </div>
           <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
-          </div>
-        </div>
-        <div class="cards" id="set-2">
-          <div class="card">
-            <div class="q">Lorem Ipsum Domat2</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
+            <div class="q">How big can teams be?</div>
+            <div class="a">Teams can be up to four people. While you may work as an individual, we highly encourage collaborating with others. If you don't have a team or need help finding one, make sure not to miss our team formation and ideation session on Saturday.</div>
           </div>
           <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
+            <div class="q">What should I bring?</div>
+            <div class="a">Attendees should bring a valid student ID or some other form of identification, as well as a signed and completed waiver. Bring laptops and chargers, along with any other technology that you may want to use! We will have designated sleeping spots so feel free to bring a sleeping bag and pillow. Also it is highly suggested that you bring toiletries so you can feel refreshed and beautiful!</div>
           </div>
           <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
+            <div class="q">How much does it cost to attend?</div>
+            <div class="a">Nothing! Just bring your beautiful self and ideas and we will provide you with the food, Wifi, workspace, and swag!</div>
           </div>
           <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
+            <div class="q">How can I apply?</div>
+            <div class="a">Applications are not open yet, but they will be processed on a rolling basis. To be notified when applications are open, click <link>here</link>.</div>
           </div>
           <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
+            <div class="q">What is the schedule like?</div>
+            <div class="a">It will be from Saturday, September 17 through Sunday, September 18th. Be sure to check back for a more specific schedule, but don't worry! There will be plenty of fun activities that will keep you entertained.</div>
           </div>
           <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
-          </div>
-        </div>
-        <div class="cards" id="set-3">
-          <div class="card">
-            <div class="q">Lorem Ipsum Domat2</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
-          </div>
-          <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
-          </div>
-          <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
-          </div>
-          <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
-          </div>
-          <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
-          </div>
-          <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
-          </div>
-        </div>
-        <div class="cards" id="set-4">
-          <div class="card">
-            <div class="q">Lorem Ipsum Domat2</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
-          </div>
-          <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
-          </div>
-          <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
-          </div>
-          <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
-          </div>
-          <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
-          </div>
-          <div class="card">
-            <div class="q">Lorem Ipsum Domat</div>
-            <div class="a">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed odio est, congue sed augue nec, consectetur gravida libero.</div>
+            <div class="q">What if I have another question?</div>
+            <div class="a">Email us at <a href="mailto:hi@smhacks.com">hi@smhacks.com</a> if you have any additional questions. We are always happy to help!</div>
           </div>
         </div>
       </div>
@@ -157,16 +94,24 @@
         Sponsors
       </div>
       <div class="inbox">
-        Sponsors Content
+        <p>
+          We'll be announcing our <i>awesome</i> sponsors very soon.<br>
+          Want to get involved?<br>
+        </p>
+        <div>
+          <a href="docs/sponsor.pdf" class="button">Sponsorship Packet</a>
+        </div>
       </div>
     </div>
-    <div class="outbox" id="team">
+    <div class="outbox" id="partners">
       <div class="title">
-        Team
+        Partners
       </div>
       <div class="inbox">
-        Team Content
-        <a href='http://www.freepik.com/free-vector/vector-cars-set_717956.htm'>Designed by Freepik</a>
+        <a class="partner" href="http://streameducation.org">
+          <div class="stream">
+          </div>
+        </a>
       </div>
     </div>
   </body>
