--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </div>
           <div class="card">
             <div class="q">What if I have another question?</div>
-            <div class="a">Email us at <a href="mailto:hi@smhacks.com">hi@smhacks.com</a> if you have any additional questions. We are always happy to help!</div>
+            <div class="a">Email us at <a href="mailto:hi@smhacks.com" target="_blank">hi@smhacks.com</a> if you have any additional questions. We are always happy to help!</div>
           </div>
         </div>
       </div>
@@ -108,7 +108,7 @@
         Partners
       </div>
       <div class="inbox">
-        <a class="partner" href="http://streameducation.org">
+        <a class="partner" href="http://streameducation.org" target="_blank">
           <div class="stream">
           </div>
         </a>
