--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         SM Hacks
         <div class="subtitle">
           San Mateo's First High School Hackathon<br>
-          September 17-18th 2016
+          September 17-18, 2016
         </div>
       </div>
       <div class="bridge">
@@ -109,8 +109,10 @@
       </div>
       <div class="inbox">
         <a class="partner" href="http://streameducation.org" target="_blank">
-          <div class="stream">
-          </div>
+          <img src="images/sponsors/stream.jpg" class="stream">
+        </a>
+        <a class="partner" href="https://mlh.io" target="_blank">
+          <img src="images/sponsors/mlh-logo.png">
         </a>
       </div>
     </div>
