--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--DESIGNED BY BEN PANG (Github: @molarmanful)--><!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.load.min.js"></script>
@@ -22,8 +22,9 @@
         <div class="row">
           <div class="col-sm-12">
             <h1 id="home">SM Hacks</h1>
-            <h3>September 17-18, 2016 @ <a target='_blank' href='https://goo.gl/maps/H94iydpfHEn'>Opera Mediaworks</a></h3>
-            <p class="lead">San Mateo's first <b>high school</b> hackathon.</p><br><i data-when="exit" data-from='0' data-to='0.5' data-translatey='500' data-rotatez='360' data-opacity='0' class="fa fa-angle-down fa-5x scrollme animateme"></i>
+            <h3>San Mateo's first <b>high school</b> hackathon.</h3>
+            <p class="lead">September 17-18, 2016 @ <a target='_blank' href='https://goo.gl/maps/H94iydpfHEn'>Opera Mediaworks</a></p>
+            <div class="btn-group"><a data-when="exit" data-from='0' data-to='0.5' data-opacity='0' data-translatex='-500' href="https://smhacks.typeform.com/to/XokTDO" target="_blank" class="btn btn-default btn-lg scrollme animateme">Register!</a><a data-when="exit" data-from='0' data-to='0.5' data-opacity='0' data-translatex='500' href="https://smhacks.typeform.com/to/XokTDO" target="_blank" class="btn btn-default btn-lg scrollme animateme">Sign up as a mentor!</a></div><br><br><br><i data-when="exit" data-from='0' data-to='0.5' data-translatey='500' data-rotatez='360' data-opacity='0' class="fa fa-angle-down fa-5x scrollme animateme"></i>
           </div>
         </div>
       </div>
@@ -63,7 +64,7 @@
           <div data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' class="row scrollme animateme">
             <div class="col-sm-4">
               <h3>Do I have to be in high school?</h3>
-              <p>Yes, only current high school students will be able to attend. Unfortunately, we are not accepting middle school students. College students are welcome to help out as mentors!</p>
+              <p>Yes, only current high school students will be able to attend. Unfortunately, we are not accepting middle school students. However, college students are welcome to help out. To mentor or lead a workshop, click <a target="_blank" href="https://smhacks.typeform.com/to/avpXre">here</a> or email <a target="_blank" href="mailto:volunteer@smhacks.com">volunteer@smhacks.com</a> for more details.</p>
             </div>
             <div class="col-sm-4">
               <h3>What if I don't have a team or an idea?</h3>
@@ -85,7 +86,7 @@
             </div>
             <div class="col-sm-4">
               <h3>How can I apply?</h3>
-              <p>Applications are not open yet, but they will be processed on a rolling basis. To be notified when applications are open, <a href="#update">subscribe</a>.</p>
+              <p>Just fill out <a target="_blank" href="https://smhacks.typeform.com/to/XokTDO">this form</a>! Applications close Wednesday, August 31 but will be processed on a rolling basis. Make sure to <a href="#update">subscribe</a>, follow us on <a target="blank" href="https://twitter.com/sanmateohacks">Twitter</a>, and like us on <a target="blank" href="https://www.facebook.com/sanmateohacks">Facebook</a> for the latest updates!</p>
             </div>
           </div>
           <div data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' class="row scrollme animateme">
@@ -95,7 +96,7 @@
             </div>
             <div class="col-sm-4">
               <h3>What if I have another question?</h3>
-              <p>Email us at <a href='mailto:hi@smhacks.com'>hi@smhacks.com</a> if you have any additional questions. We are always happy to help!</p>
+              <p>Email us at <a href="mailto:hi@smhacks.com">hi@smhacks.com</a> if you have additional questions. Please email questions about mentoring or leading workshops to <a href="mailto:volunteer@smhacks.com">volunteer@smhacks.com</a> and sponsorship questions to <a href="mailto:sponsors@smhacks.com">sponsors@smhacks.com</a>. We are always happy to help!</p>
             </div>
           </div>
         </div>
@@ -122,24 +123,20 @@
             </div>
           </div><br><br><br>
           <div class="row text-center">
-            <div class="col-sm-6"><a href="http://operamediaworks.com/" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="opera.png" id="opera" class="animateme"></a></div>
-            <div class="col-sm-6"><a href="http://www.vilynx.com/" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="vilynx.png" id="vilynx" class="animateme"></a></div>
-          </div><br>
-          <div class="row text-center">
-            <div class="col-sm-6"><a href="http://www.justinmind.com" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="justinmind.png" id="justinmind" class="animateme"></a></div>
-            <div class="col-sm-6"><a href="http://mlworks.com" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="mlw.png" id="mlw" class="animateme"></a></div>
+            <div class="col-md-3 col-sm-6"><a href="http://operamediaworks.com/" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="opera.png" id="opera" class="animateme"></a></div>
+            <div class="col-md-3 col-sm-6"><a href="http://www.vilynx.com/" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="vilynx.png" id="vilynx" class="animateme"></a></div>
+            <div class="col-md-3 col-sm-6"><a href="http://www.justinmind.com" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="justinmind.png" id="justinmind" class="animateme"></a></div>
+            <div class="col-md-3 col-sm-6"><a href="http://mlworks.com" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="mlw.png" id="mlw" class="animateme"></a></div>
           </div>
         </div>
         <hr>
         <div id="partners" data-when="enter" data-from='0.5' data-to='0' data-translatex='-1000' class="scrollme animateme">
           <h2 class="text-center">Partners</h2>
           <div class="row text-center">
-            <div class="col-sm-6"><a href="https://hackclub.com" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="hackclub.png" id="hackclub" class="animateme"></a></div>
-            <div class="col-sm-6"><a href="https://mlh.io" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="mlh.png" id="mlh" class="animateme"></a></div>
-          </div><br>
-          <div class="row text-center">
-            <div class="col-sm-6"><a href="https://www.hackerearth.com/" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="hackerearth.png" id="hackerearth" class="animateme"></a></div>
-            <div class="col-sm-6"><a href="http://streameducation.org" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="stream.png" id="stream" class="animateme"></a></div>
+            <div class="col-md-3 col-sm-6"><a href="https://hackclub.com" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="hackclub.png" id="hackclub" class="animateme"></a></div>
+            <div class="col-md-3 col-sm-6"><a href="https://mlh.io" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="mlh.png" id="mlh" class="animateme"></a></div>
+            <div class="col-md-3 col-sm-6"><a href="https://www.hackerearth.com/" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="hackerearth.png" id="hackerearth" class="animateme"></a></div>
+            <div class="col-md-3 col-sm-6"><a href="http://streameducation.org" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="stream.png" id="stream" class="animateme"></a></div>
           </div>
         </div>
         <hr>
@@ -162,8 +159,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <hr><br><br><br><br><br><br>
+        </div><br>
+        <hr><br><br><br><br>
         <footer data-when="enter" data-from='1' data-to='0' data-translatey='1000' class="footer scrollme animateme">
           <div class="container">
             <div class="row">
@@ -171,7 +168,10 @@
               <div class="col-sm-7 hidden-xs">
                 <p class="text-muted">Made with <i class='fa fa-heart' style='color:#ff7242'></i> by SM Hacks.</p>
               </div>
-              <div class="col-sm-4 hidden-xs"></div>
+              <div class="col-sm-2 hidden-xs"></div>
+              <div class="col-sm-2 col-xs-12 text-center">
+                <p><a href="https://www.facebook.com/sanmateohacks" target="_blank" style="background-color:transparent; border:none; display:inline-block" class="btn btn-info"><i class="fa fa-facebook-square fa-3x"></i></a><a href="https://twitter.com/sanmateohacks" target="_blank" style="background-color:transparent; border:none; display:inline-block" class="btn btn-info"><i class="fa fa-twitter-square fa-3x"></i></a></p>
+              </div>
             </div>
           </div>
         </footer>
