--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <h1 id="home">SM Hacks</h1>
             <h3>San Mateo's first <b>high school</b> hackathon.</h3>
             <p class="lead">September 17-18, 2016 @ <a target='_blank' href='https://goo.gl/maps/H94iydpfHEn'>Opera Mediaworks</a></p>
-            <div class="btn-group"><a data-when="exit" data-from='0' data-to='0.5' data-opacity='0' data-translatex='-500' href="https://smhacks.typeform.com/to/XokTDO" target="_blank" class="btn btn-default btn-lg scrollme animateme">Register!</a><a data-when="exit" data-from='0' data-to='0.5' data-opacity='0' data-translatex='500' href="https://smhacks.typeform.com/to/XokTDO" target="_blank" class="btn btn-default btn-lg scrollme animateme">Sign up as a mentor!</a></div><br><br><br><i data-when="exit" data-from='0' data-to='0.5' data-translatey='500' data-rotatez='360' data-opacity='0' class="fa fa-angle-down fa-5x scrollme animateme"></i>
+            <div class="btn-group"><a data-when="exit" data-from='0' data-to='0.5' data-opacity='0' data-translatex='-500' href="https://smhacks.typeform.com/to/XokTDO" target="_blank" class="btn btn-default btn-lg scrollme animateme">Register!</a></div><br><br><br>
+            <p class="medium">Interested in mentoring or leading a workshop? Sign-up <a href="https://smhacks.typeform.com/to/avpXre" target="_blank">here</a>!</p><br><br><i data-when="exit" data-from='0' data-to='0.5' data-translatey='500' data-rotatez='360' data-opacity='0' class="fa fa-angle-down fa-5x scrollme animateme"></i>
           </div>
         </div>
       </div>
