--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
           <div class="col-sm-12">
             <h1 id="home">SM Hacks</h1>
             <h3>San Mateo's first <b>high school</b> hackathon.</h3>
-            <p class="lead">September 17-18, 2016 @ <a target='_blank' href='https://goo.gl/maps/H94iydpfHEn'>Opera Mediaworks</a></p>
-            <div class="btn-group"><a data-when="exit" data-from='0' data-to='0.5' data-opacity='0' data-translatex='-500' href="https://smhacks.typeform.com/to/XokTDO" target="_blank" class="btn btn-default btn-lg scrollme animateme">Register!</a></div><br><br><br>
-            <p class="medium">Interested in mentoring or leading a workshop? Sign-up <a href="https://smhacks.typeform.com/to/avpXre" target="_blank">here</a>!</p><br><br><i data-when="exit" data-from='0' data-to='0.5' data-translatey='500' data-rotatez='360' data-opacity='0' class="fa fa-angle-down fa-5x scrollme animateme"></i>
+            <p class="lead">September 17-18, 2016 @ <a target='_blank' href='https://goo.gl/maps/H94iydpfHEn'>Opera Mediaworks</a></p><a data-when="exit" data-from='0' data-to='0.5' data-opacity='0' data-translatex='500' data-toggle="modal" data-target="#m" class="btn btn-default btn-lg scrollme animateme">Sign up now!</a><br><br><br><i data-when="exit" data-from='0' data-to='0.5' data-translatey='500' data-rotatez='360' data-opacity='0' class="fa fa-angle-down fa-5x scrollme animateme"></i>
           </div>
         </div>
       </div>
@@ -46,9 +44,9 @@
     </nav>
     <div class="content">
       <div class="container"><br><br><br><br>
-        <div id="faq" data-when="enter" data-from='0.5' data-to='0' data-translatex='1000' class="scrollme animateme">
+        <div id="faq" data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatex='1000' class="scrollme animateme">
           <h2 class="text-center">FAQ</h2>
-          <div data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' class="row scrollme animateme">
+          <div data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='1000' class="row scrollme animateme">
             <div class="col-sm-4">
               <h3>What is SM Hacks?</h3>
               <p>SM Hacks is a 200-person hackathon that will gather the innovators of tomorrow into an amazing experience. SM Hacks 2016 will be hosted at <a target="_blank" href="https://goo.gl/maps/H94iydpfHEn">Opera Mediaworks</a>, in San Mateo.</p>
@@ -62,7 +60,7 @@
               <p>No worries! SM Hacks is the perfect time to learn how to code and all students, regardless of skill level and experience, are welcome. There will be plenty of mentors on hand glad to answer any and all questions and workshops specifically designed for those with no prior experience. <a href="#update">Stay tuned</a> for more information about workshops!</p>
             </div>
           </div>
-          <div data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' class="row scrollme animateme">
+          <div data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='1000' class="row scrollme animateme">
             <div class="col-sm-4">
               <h3>Do I have to be in high school?</h3>
               <p>Yes, only current high school students will be able to attend. Unfortunately, we are not accepting middle school students. However, college students are welcome to help out. To mentor or lead a workshop, click <a target="_blank" href="https://smhacks.typeform.com/to/avpXre">here</a> or email <a target="_blank" href="mailto:volunteer@smhacks.com">volunteer@smhacks.com</a> for more details.</p>
@@ -76,7 +74,7 @@
               <p>Teams can be up to four people. While you may work as an individual, we highly encourage collaborating with others. If you don't have a team or need help finding one, make sure not to miss our team formation and ideation session on Saturday.</p>
             </div>
           </div>
-          <div data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' class="row scrollme animateme">
+          <div data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='1000' class="row scrollme animateme">
             <div class="col-sm-4">
               <h3>What should I bring?</h3>
               <p>Attendees should bring a valid student ID or some other form of identification, as well as a signed and completed waiver. Bring laptops and chargers, along with any other technology that you may want to use! We will have designated sleeping spots so feel free to bring a sleeping bag and pillow. Also it is highly suggested that you bring toiletries so you can feel refreshed and beautiful!</p>
@@ -90,10 +88,14 @@
               <p>Just fill out <a target="_blank" href="https://smhacks.typeform.com/to/XokTDO">this form</a>! Applications close Wednesday, August 31 but will be processed on a rolling basis. Make sure to <a href="#update">subscribe</a>, follow us on <a target="blank" href="https://twitter.com/sanmateohacks">Twitter</a>, and like us on <a target="blank" href="https://www.facebook.com/sanmateohacks">Facebook</a> for the latest updates!</p>
             </div>
           </div>
-          <div data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' class="row scrollme animateme">
+          <div data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='1000' class="row scrollme animateme">
             <div class="col-sm-4">
               <h3>What is the schedule like?</h3>
               <p>It will be from Saturday, September 17 through Sunday, September 18, 2016. Be sure to check back for a more specific schedule, but don't worry! There will be plenty of fun activities that will keep you entertained.</p>
+            </div>
+            <div class="col-sm-4">
+              <h3>Will there be travel reimbursements?</h3>
+              <p>Unfortunately, we will not be offering travel reimbursements this year. Please email us at <a href="mailto:hi@smhacks.com">hi@smhacks.com</a> for additional details.</p>
             </div>
             <div class="col-sm-4">
               <h3>What if I have another question?</h3>
@@ -116,7 +118,7 @@
                 li TBD
         hr
         -->
-        <div id="sponsors" data-when="enter" data-from='0.5' data-to='0' data-translatex='1000' class="scrollme animateme">
+        <div id="sponsors" data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatex='1000' class="scrollme animateme">
           <h2 class="text-center">Sponsors</h2>
           <div class="row">
             <div class="col-sm-12 text-center">
@@ -124,24 +126,24 @@
             </div>
           </div><br><br><br>
           <div class="row text-center">
-            <div class="col-md-3 col-sm-6"><a href="http://operamediaworks.com/" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="opera.png" id="opera" class="animateme"></a></div>
-            <div class="col-md-3 col-sm-6"><a href="http://www.vilynx.com/" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="vilynx.png" id="vilynx" class="animateme"></a></div>
-            <div class="col-md-3 col-sm-6"><a href="http://www.justinmind.com" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="justinmind.png" id="justinmind" class="animateme"></a></div>
-            <div class="col-md-3 col-sm-6"><a href="http://mlworks.com" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="mlw.png" id="mlw" class="animateme"></a></div>
+            <div class="col-md-3 col-sm-6"><a href="http://operamediaworks.com/" target="_blank"><img data-when="enter" data-from='0.7' data-to='0' data-translatey='500' data-opacity='0' src="opera.png" id="opera" class="animateme"></a></div>
+            <div class="col-md-3 col-sm-6"><a href="http://www.vilynx.com/" target="_blank"><img data-when="enter" data-from='0.7' data-to='0' data-translatex='500' data-opacity='0' src="vilynx.png" id="vilynx" class="animateme"></a></div>
+            <div class="col-md-3 col-sm-6"><a href="http://www.justinmind.com" target="_blank"><img data-when="enter" data-from='0.7' data-to='0' data-translatey='500' data-opacity='0' src="justinmind.png" id="justinmind" class="animateme"></a></div>
+            <div class="col-md-3 col-sm-6"><a href="http://mlworks.com" target="_blank"><img data-when="enter" data-from='0.7' data-to='0' data-translatex='500' data-opacity='0' src="mlw.png" id="mlw" class="animateme"></a></div>
           </div>
         </div>
         <hr>
-        <div id="partners" data-when="enter" data-from='0.5' data-to='0' data-translatex='-1000' class="scrollme animateme">
+        <div id="partners" data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatex='-1000' class="scrollme animateme">
           <h2 class="text-center">Partners</h2>
           <div class="row text-center">
-            <div class="col-md-3 col-sm-6"><a href="https://hackclub.com" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="hackclub.png" id="hackclub" class="animateme"></a></div>
-            <div class="col-md-3 col-sm-6"><a href="https://mlh.io" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="mlh.png" id="mlh" class="animateme"></a></div>
-            <div class="col-md-3 col-sm-6"><a href="https://www.hackerearth.com/" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="hackerearth.png" id="hackerearth" class="animateme"></a></div>
-            <div class="col-md-3 col-sm-6"><a href="http://streameducation.org" target="_blank"><img data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' src="stream.png" id="stream" class="animateme"></a></div>
+            <div class="col-md-3 col-sm-6"><a href="https://hackclub.com" target="_blank"><img data-when="enter" data-from='0.7' data-to='0' data-translatex='-500' data-opacity='0' src="hackclub.png" id="hackclub" class="animateme"></a></div>
+            <div class="col-md-3 col-sm-6"><a href="https://mlh.io" target="_blank"><img data-when="enter" data-from='0.7' data-to='0' data-translatey='500' data-opacity='0' src="mlh.png" id="mlh" class="animateme"></a></div>
+            <div class="col-md-3 col-sm-6"><a href="https://www.hackerearth.com/" target="_blank"><img data-when="enter" data-from='0.7' data-to='0' data-translatex='-500' data-opacity='0' src="hackerearth.png" id="hackerearth" class="animateme"></a></div>
+            <div class="col-md-3 col-sm-6"><a href="http://streameducation.org" target="_blank"><img data-when="enter" data-from='0.7' data-to='0' data-translatey='500' data-opacity='0' src="stream.png" id="stream" class="animateme"></a></div>
           </div>
         </div>
         <hr>
-        <div id="update" data-when="enter" data-from='0.5' data-to='0' data-translatex='1000' class="scrollme animateme">
+        <div id="update" data-when="enter" data-from='0.5' data-to='0' data-translatex='1000' data-opacity='0' class="scrollme animateme">
           <h2 class="text-center">Subscribe</h2>
           <div class="row">
             <div class="col-sm-12 text-center">
@@ -150,7 +152,7 @@
                 <div class="col-sm-3"></div>
                 <div class="col-sm-6">
                   <div class="input-group">
-                    <input id="u" data-when="enter" data-from='0.5' data-to='0' data-translatey='200' placeholder="johnsmith@example.com" type="email" class="form-control animateme">
+                    <input id="u" data-when="enter" data-from='0.5' data-to='0' data-translatey='200' data-opacity='0' placeholder="johnsmith@example.com" type="email" class="form-control animateme">
                     <div class="input-group-btn">
                       <button id="s" class="btn btn-primary">Submit!</button>
                     </div>
@@ -162,20 +164,36 @@
           </div>
         </div><br>
         <hr><br><br><br><br>
-        <footer data-when="enter" data-from='1' data-to='0' data-translatey='1000' class="footer scrollme animateme">
+        <footer data-when="enter" data-from='1' data-to='0' data-translatex='1000' class="footer scrollme animateme">
           <div class="container">
             <div class="row">
-              <div class="col-sm-1 text-center"><img src="logo_2.0_solo.svg"></div>
+              <div class="col-sm-1 col-xs-6 text-center"><img src="logo_2.0_solo.svg"></div>
               <div class="col-sm-7 hidden-xs">
                 <p class="text-muted">Made with <i class='fa fa-heart' style='color:#ff7242'></i> by SM Hacks.</p>
               </div>
               <div class="col-sm-2 hidden-xs"></div>
-              <div class="col-sm-2 col-xs-12 text-center">
+              <div class="col-sm-2 col-xs-6 text-center">
                 <p><a href="https://www.facebook.com/sanmateohacks" target="_blank" style="background-color:transparent; border:none; display:inline-block" class="btn btn-info"><i class="fa fa-facebook-square fa-3x"></i></a><a href="https://twitter.com/sanmateohacks" target="_blank" style="background-color:transparent; border:none; display:inline-block" class="btn btn-info"><i class="fa fa-twitter-square fa-3x"></i></a></p>
               </div>
             </div>
           </div>
         </footer>
+      </div>
+    </div>
+    <div id="m" tabindex="-1" role="dialog" class="modal fade">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button data-dismiss="modal" class="close">&times;</button>
+            <h1 class="modal-title">Sign Up</h1>
+          </div>
+          <div class="modal-body text-center">
+            <h3><a href="https://smhacks.typeform.com/to/XokTDO" target="_blank" class="btn btn-default">Hacker</a> or <a href="https://smhacks.typeform.com/to/avpXre" target="_blank" class="btn btn-default">Mentor</a>?</h3>
+          </div>
+          <div class="modal-footer">
+            <button data-dismiss="modal" class="btn btn-primary">Cancel</button>
+          </div>
+        </div>
       </div>
     </div>
   </body>
