--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta name="description" content="San Mateo's first high school hackathon.">
+    <meta name="keywords" content="san mateo hackathon, sm hackathon, san mateo hacks, sm hacks, smhacks, san mateo high school, smhs, smhs hackathon, high school hackathon, hackathon, san mateo">
+    <link rel="author" href="https://plus.google.com/">
+    <link rel="canonical" href="http://smhacks.com">
     <title>SM Hacks</title>
     <link rel="stylesheet prefetch" href="bootstrap.css">
     <link rel="stylesheet prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -35,7 +39,7 @@
       <div id="collapse" class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#faq">FAQ</a></li>
-          <!--li: a(href='#schedule') Schedule-->
+          <li><a href="#schedule">Schedule</a></li>
           <li><a href="#sponsors">Sponsors</a></li>
           <li><a href="#partners">Partners</a></li>
           <li><a href="#update">Subscribe</a></li>
@@ -104,66 +108,86 @@
           </div>
         </div>
         <hr>
-        <!--
-        #schedule.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-translatex=-1000)
-          h2.text-center Schedule
-          .row.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000)
-            .col-sm-6.text-center
-              h3 Day 1
-              ul.list-unstyled
-                li TBD
-            .col-sm-6.text-center
-              h3 Day 2
-              ul.list-unstyled
-                li TBD
-        hr
-        -->
-        <div id="sponsors" data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatex='1000' class="scrollme animateme">
-          <h2 class="text-center">Sponsors</h2>
-          <div class="row">
-            <div class="col-sm-12 text-center">
-              <p class="lead">We will be announcing our full list of awesome sponsors soon! Want to get involved?</p><a data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='200' href="sponsor.pdf" target="_blank" class="btn btn-primary btn-lg animateme">Get the Sponsorship Packet!</a>
+        <div id="schedule" data-when="enter" data-from='0.5' data-to='0' data-translatex='-1000' class="scrollme animateme">
+          <h2 class="text-center">Schedule</h2>
+          <p class="lead">Hacking is from noon to noon.</p>
+          <div data-when="enter" data-from='0.5' data-to='0' data-translatey='1000' class="row animateme">
+            <div class="col-sm-3 hidden-xs"></div>
+            <div class="col-sm-3 text-center">
+              <h3>Saturday, Sept. 17</h3>
+              <ul class="list-unstyled">
+                <li><b>10am</b> - Registration</li>
+                <li><b>11am</b> - Opening Ceremony</li>
+                <li><b>Noon</b> - Hacking Starts</li>
+                <li><b>Noon</b> - Team Mixer</li>
+                <li><b>Noon</b> - Lunch</li>
+                <li><b>6:30pm</b> - Dinner</li>
+              </ul>
             </div>
-          </div><br><br><br>
-          <div class="row text-center">
-            <div class="col-md-3 col-sm-6"><a href="http://operamediaworks.com/" target="_blank"><img data-when="enter" data-from='0.7' data-to='0' data-translatey='500' data-opacity='0' src="opera.png" id="opera" class="animateme"></a></div>
-            <div class="col-md-3 col-sm-6"><a href="http://www.vilynx.com/" target="_blank"><img data-when="enter" data-from='0.7' data-to='0' data-translatex='500' data-opacity='0' src="vilynx.png" id="vilynx" class="animateme"></a></div>
-            <div class="col-md-3 col-sm-6"><a href="http://www.justinmind.com" target="_blank"><img data-when="enter" data-from='0.7' data-to='0' data-translatey='500' data-opacity='0' src="justinmind.png" id="justinmind" class="animateme"></a></div>
-            <div class="col-md-3 col-sm-6"><a href="http://mlworks.com" target="_blank"><img data-when="enter" data-from='0.7' data-to='0' data-translatex='500' data-opacity='0' src="mlw.png" id="mlw" class="animateme"></a></div>
+            <div class="col-sm-3 text-center">
+              <h3>Sunday, Sept. 18</h3>
+              <ul class="list-unstyled">
+                <li><b>12am</b> - Midnight Snack</li>
+                <li><b>8am </b>- Breakfast</li>
+                <li><b>11:30am</b> - Lunch</li>
+                <li><b>Noon</b> - Hacking Ends</li>
+                <li><b>Noon</b> - Judging and Demos</li>
+                <li><b>2pm </b>- Closing Ceremony</li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <hr>
-        <div id="partners" data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatex='-1000' class="scrollme animateme">
-          <h2 class="text-center">Partners</h2>
-          <div class="row text-center">
-            <div class="col-md-3 col-sm-6"><a href="https://hackclub.com" target="_blank"><img data-when="enter" data-from='0.7' data-to='0' data-translatex='-500' data-opacity='0' src="hackclub.png" id="hackclub" class="animateme"></a></div>
-            <div class="col-md-3 col-sm-6"><a href="https://mlh.io" target="_blank"><img data-when="enter" data-from='0.7' data-to='0' data-translatey='500' data-opacity='0' src="mlh.png" id="mlh" class="animateme"></a></div>
-            <div class="col-md-3 col-sm-6"><a href="https://www.hackerearth.com/" target="_blank"><img data-when="enter" data-from='0.7' data-to='0' data-translatex='-500' data-opacity='0' src="hackerearth.png" id="hackerearth" class="animateme"></a></div>
-            <div class="col-md-3 col-sm-6"><a href="http://streameducation.org" target="_blank"><img data-when="enter" data-from='0.7' data-to='0' data-translatey='500' data-opacity='0' src="stream.png" id="stream" class="animateme"></a></div>
+          <hr>
+          <div id="sponsors" data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatex='1000' class="scrollme animateme">
+            <h2 class="text-center">Sponsors</h2>
+            <div class="row">
+              <div class="col-sm-12 text-center">
+                <p class="lead">We will be announcing our full list of awesome sponsors soon! Want to get involved?</p><a data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatey='200' href="sponsor.pdf" target="_blank" class="btn btn-primary btn-lg animateme">Get the Sponsorship Packet!</a>
+              </div>
+            </div><br><br><br>
+            <div class="row text-center">
+              <div class="col-sm-2 hidden-xs"></div>
+              <div class="col-sm-4"><a href="http://operamediaworks.com/" target="_blank"><img data-when="enter" data-from='0.7' data-to='0' data-translatex='-500' data-opacity='0' src="opera.png" id="opera" class="animateme"></a></div>
+              <div class="col-sm-4"><a href="http://www.smule.com/" target="_blank"><img data-when="enter" data-from='0.7' data-to='0' data-translatex='500' data-opacity='0' src="smule.png" id="smule" class="animateme"></a></div>
+            </div>
+            <div class="row text-center">
+              <div class="col-sm-4"><a href="http://www.justinmind.com" target="_blank"><img data-when="enter" data-from='1' data-to='0' data-translatex='-500' data-opacity='0' src="justinmind.png" id="justinmind" class="animateme"></a></div>
+              <div class="col-sm-4"><a href="http://www.vilynx.com/" target="_blank"><img data-when="enter" data-from='1' data-to='0' data-translatey='-500' data-opacity='0' src="vilynx.png" id="vilynx" class="animateme"></a></div>
+              <div class="col-sm-4"><a href="http://mlworks.com" target="_blank"><img data-when="enter" data-from='1' data-to='0' data-translatex='500' data-opacity='0' src="mlw.png" id="mlw" class="animateme"></a></div>
+            </div>
           </div>
-        </div>
-        <hr>
-        <div id="update" data-when="enter" data-from='0.5' data-to='0' data-translatex='1000' data-opacity='0' class="scrollme animateme">
-          <h2 class="text-center">Subscribe</h2>
-          <div class="row">
-            <div class="col-sm-12 text-center">
-              <p class="lead">Enter your email here to receive updates from SM Hacks!</p>
-              <div class="row">
-                <div class="col-sm-3"></div>
-                <div class="col-sm-6">
-                  <div class="input-group">
-                    <input id="u" data-when="enter" data-from='0.5' data-to='0' data-translatey='200' data-opacity='0' placeholder="johnsmith@example.com" type="email" class="form-control animateme">
-                    <div class="input-group-btn">
-                      <button id="s" class="btn btn-primary">Submit!</button>
+          <hr>
+          <div id="partners" data-when="enter" data-from='0.5' data-to='0' data-opacity='0' data-translatex='-1000' class="scrollme animateme">
+            <h2 class="text-center">Partners</h2>
+            <div class="row text-center">
+              <div class="col-md-3 col-sm-6"><a href="https://hackclub.com" target="_blank"><img data-when="enter" data-from='1' data-to='0' data-translatex='-500' data-opacity='0' src="hackclub.png" id="hackclub" class="animateme"></a></div>
+              <div class="col-md-3 col-sm-6"><a href="https://mlh.io" target="_blank"><img data-when="enter" data-from='1' data-to='0' data-translatey='500' data-opacity='0' src="mlh.png" id="mlh" class="animateme"></a></div>
+              <div class="col-md-3 col-sm-6"><a href="https://www.hackerearth.com/" target="_blank"><img data-when="enter" data-from='1' data-to='0' data-translatex='-500' data-opacity='0' src="hackerearth.png" id="hackerearth" class="animateme"></a></div>
+              <div class="col-md-3 col-sm-6"><a href="http://streameducation.org" target="_blank"><img data-when="enter" data-from='1' data-to='0' data-translatey='500' data-opacity='0' src="stream.png" id="stream" class="animateme"></a></div>
+            </div>
+          </div>
+          <hr>
+          <div id="update" data-when="enter" data-from='0.5' data-to='0' data-translatex='1000' data-opacity='0' class="scrollme animateme">
+            <h2 class="text-center">Subscribe</h2>
+            <div class="row">
+              <div class="col-sm-12 text-center">
+                <p class="lead">Enter your email here to receive updates from SM Hacks!</p>
+                <div class="row">
+                  <div class="col-sm-3"></div>
+                  <div class="col-sm-6">
+                    <div class="input-group">
+                      <input id="u" data-when="enter" data-from='0.5' data-to='0' data-translatey='200' data-opacity='0' placeholder="johnsmith@example.com" type="email" class="form-control animateme">
+                      <div class="input-group-btn">
+                        <button id="s" class="btn btn-primary">Submit!</button>
+                      </div>
                     </div>
+                    <div id="a" role="alert" class="alert alert-dismissible"></div>
                   </div>
-                  <div id="a" role="alert" class="alert alert-dismissible"></div>
                 </div>
               </div>
             </div>
-          </div>
-        </div><br>
-        <hr><br><br><br><br>
+          </div><br>
+          <hr>
+        </div><br><br><br><br>
         <footer data-when="enter" data-from='1' data-to='0' data-translatex='1000' class="footer scrollme animateme">
           <div class="container">
             <div class="row">
